--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <title>Volvo Cars Shop</title>
   <link rel="stylesheet" href="style.css">
 
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#0d6efd">
+
+
   
 </head>
 
@@ -54,3 +58,4 @@
 </body>
 
 </html>
+
